[package]
name = "day-01"
version = "0.1.0"
edition = "2021"
authors = ["Larry Chan <https://github.com/larrysammii>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
indoc = "2.0.4"
